fix scrollbar issue

--- a/client/public/main.css
+++ b/client/public/main.css
@@ -165,9 +165,11 @@ body {
     overflow-y: scroll;
 }
 
-.scrolly {
-    max-height: calc(100vh - 60px);
-    overflow-y: scroll;
+.fixed-map {
+    margin-top: 60px;
+    max-width: 66.67%;
+    z-index: 1;
+    
 }
 
 .map-view {
